<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="net.sipconsult.pos.SharedViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.payment.paymentmethod.cashDollar.CashDollarFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelinePaymentCashDollarDivision"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.4" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelinePaymentCashDollarBottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.9" />

        <TextView
            android:id="@+id/textCashDollarDue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/text_due"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintEnd_toStartOf="@+id/textCashDollarTender"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <TextView
            android:id="@+id/textCashDollarTender"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/text_amount"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintEnd_toStartOf="@+id/textCashDollarChange"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textCashDollarDue"
            app:layout_constraintTop_toTopOf="@+id/textCashDollarDue" />

        <TextView
            android:id="@+id/textCashDollarChange"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/text_change"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textCashDollarTender"
            app:layout_constraintTop_toTopOf="@+id/textCashDollarTender" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextCashDollarChange"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_change"
            android:inputType="numberDecimal"
            android:text="@{viewModel.change}"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/editTextCashDollarAmount"
            app:layout_constraintTop_toBottomOf="@+id/textCashDollarChange" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextCashDollarAmount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_amount_paid"
            android:inputType="numberDecimal"
            android:text="@={viewModel.editTextCashDollarAmount}"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/editTextCashDollarChange"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/editTextCashDollarDue"
            app:layout_constraintTop_toBottomOf="@+id/textCashDollarTender" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextCashDollarDue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_due"
            android:inputType="numberDecimal"
            android:text="@{viewModel.totalPrice.toString()}"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/editTextCashDollarAmount"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textCashDollarDue" />

        <net.sipconsult.pos.util.MyKeyboard
            android:id="@+id/keyboardPayment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/guidelinePaymentCashDollarBottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guidelinePaymentCashDollarDivision" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="CASH DOLLAR"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>